// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FeedItemCard CategoryLabel component should render 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <Svg
    height={21.6}
    viewBox="0 0 24 24"
    width={21.6}
  >
    <Path
      d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
      fill="#505050"
    />
  </Svg>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 1.8,
          "paddingTop": 3.6,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render a custom icon 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <Svg
    height={21.6}
    viewBox="0 0 24 24"
    width={21.6}
  >
    <Path
      d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
      fill="#505050"
    />
  </Svg>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 1.8,
          "paddingTop": 3.6,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render a skeleton view 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": 21.6,
        "width": 21.6,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#dddddd",
          "borderRadius": 6,
          "height": 14,
          "marginVertical": 0.8899999999999997,
          "width": "40%",
        }
      }
    />
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render as Albums 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <Svg
    height={21.6}
    viewBox="0 0 24 24"
    width={21.6}
  >
    <Path
      d="M3.82 13.5H2v-.32C2 6.54 5.22 2 12 2c6.5 0 9.64 4.16 9.98 10.42v1.07h-1.82v-1c-.3-5.8-3.02-8.8-8.16-8.8-5.37 0-8.18 3.32-8.18 9.45v.3zm0 1.7h1.6c.87 0 1.58.66 1.58 1.48v2.13c0 .86-.7 1.5-1.6 1.5-.87 0-1.58-.64-1.58-1.5v-3.6zm0-1.7h1.6c1.87 0 3.4 1.42 3.4 3.18v2.13c0 1.8-1.53 3.2-3.4 3.2C3.5 22 2 20.6 2 18.8v-5.3h1.82zm16.36 1.7v3.6c0 .83-.7 1.5-1.6 1.5-.87 0-1.58-.67-1.58-1.5v-2.1c0-.82.7-1.5 1.6-1.5h1.58zm0-1.7H22v5.3c0 1.77-1.53 3.2-3.4 3.2-1.9 0-3.42-1.43-3.42-3.2v-2.1c0-1.76 1.53-3.2 3.4-3.2h1.6z"
      fill="#505050"
    />
  </Svg>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 1.8,
          "paddingTop": 3.6,
        }
      }
    >
      Albums
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render as a Series 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <Svg
    height={21.6}
    viewBox="0 0 24 24"
    width={21.6}
  >
    <Path
      d="M3.8182 5.7778v12.4444H14.2V5.7778H3.8182zM16 6v12c0 1.1046-.8954 2-2 2H4c-1.1046 0-2-.8954-2-2V6c0-1.1046.8954-2 2-2h10c1.1046 0 2 .8954 2 2zm4.1818 2.6952L16 11.8084v.3832l4.1818 3.251V8.695zM16 14.4957V9.4253l6-4.2178v13.585l-6-4.2968z"
      fill="#505050"
    />
  </Svg>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 1.8,
          "paddingTop": 3.6,
        }
      }
    >
      Series
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render children 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <Svg
    height={21.6}
    viewBox="0 0 24 24"
    width={21.6}
  >
    <Path
      d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
      fill="#505050"
    />
  </Svg>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 1.8,
          "paddingTop": 3.6,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;
